--- a/index.html
+++ b/index.html
@@ -45,5 +45,29 @@ html>
                 </div>
             </div>
         </div>
+        <br><br><br><br>
+        <div class="information">
+            <img src="neptun-removebg-preview.png" alt="" width="100px">
+            <p>Neptune is the eighth and farthest known planet from the Sun in our solar</p>
+            <img src="uranus-removebg-preview.png" alt="" width="100px">
+            <p>Uranus is the seventh planet from the Sun and the third largest planet in</p>
+            <img src="saturn-removebg-preview.png" alt="" width="100px">
+            <p>Saturn is the sixth planet from the Sun and the second largest planet in our</p>
+            <img src="Jupiter.-removebg-preview.png" alt="" width="100px">
+            <p>Jupiter is the largest planet in our solar system, with a diameter of about</p>
+            <img src="mars-removebg-preview.png" alt="" width="100px">
+            <p>Mars is a rocky planet with a thin atmosphere, and is known for its redd</p>
+        </div>
+        <br><br><br><br>
+        <div class=" planet">
+            <img src="earth-removebg-preview.png" alt="" width="100px">
+            <p>Earth is the third planet from the Sun and is the only known planet in our</p>
+            <img src="Venus-removebg-preview.png" alt="" width="100px">
+            <p>Venus is the second planet from the Sun and is known for its thick atmosphere</p>
+            <img src="mercury-removebg-preview.png" alt="" width="100px">
+            <p>Mercury is the smallest planet in our solar system, with a diameter of about</p>
+            <img src="sun-removebg-preview.png" alt="" width="100px">
+            <p> Our Sun is the star at the center of our solar system, and is the primary source</p>
+            </div>
     </body>
 </html>
