--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
             <p>Uranus is the seventh planet from the Sun and the third largest planet in</p>
             <img src="saturn-removebg-preview.png" alt="" width="100px">
             <p>Saturn is the sixth planet from the Sun and the second largest planet in our</p>
+            </div>
+        <br><br><br><br>
+        <div class="a">
             <img src="Jupiter.-removebg-preview.png" alt="" width="100px">
             <p>Jupiter is the largest planet in our solar system, with a diameter of about</p>
             <img src="mars-removebg-preview.png" alt="" width="100px">
             <p>Mars is a rocky planet with a thin atmosphere, and is known for its redd</p>
-        </div>
-        <br><br><br><br>
-        <div class=" planet">
+        
             <img src="earth-removebg-preview.png" alt="" width="100px">
             <p>Earth is the third planet from the Sun and is the only known planet in our</p>
+             </div>
+        <br><br><br><br>
+        <div class=" planet">
             <img src="Venus-removebg-preview.png" alt="" width="100px">
             <p>Venus is the second planet from the Sun and is known for its thick atmosphere</p>
             <img src="mercury-removebg-preview.png" alt="" width="100px">
@@ -71,4 +75,5 @@
             </div>
     </body>
 </html>
+
 
